--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "build": "vite build",
         "dev": "vite",
         "socket": "node socket-server.js",
-        "dev:all": "concurrently \"npm run dev\" \"npm run socket\""
+        "dev:all": "concurrently \"npm run dev\" \"npm run socket\"",
+        "start": "node socket-server.js"
     },
     "dependencies": {
         "socket.io": "^4.7.5",
