--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,19 +1,25 @@
 [phases.setup]
-nixPkgs = ['nodejs', 'php83', 'php83Packages.composer']
+nixPkgs = ['nodejs_20', 'php83', 'php83Packages.composer']
 
 [phases.install]
 cmds = [
-    'composer install --no-dev --optimize-autoloader',
-    'npm ci'
+    'composer install --no-dev --optimize-autoloader --no-interaction',
+    'npm install --production=false'
 ]
 
 [phases.build]
 cmds = [
+    'rm -f public/hot',
     'npm run build',
+    'ls -la public/build',
     'php artisan config:cache',
     'php artisan route:cache',
     'php artisan view:cache'
 ]
 
 [start]
-cmd = 'php artisan serve --host=0.0.0.0 --port=${PORT:-8000}'
+cmd = 'php artisan optimize && php artisan serve --host=0.0.0.0 --port=${PORT:-8000}'
+
+[variables]
+APP_ENV = 'production'
+NODE_ENV = 'production'
