Add sqlite database to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,12 @@
 Homestead.json
 Homestead.yaml
 Thumbs.db
+
+# SQLite Database
+database.sqlite
+*.sqlite
+*.sqlite3
+*.db
+/database/*.sqlite
+/database/*.sqlite3
+/database/*.db
