Add cache clearing to Railway deployment build phase

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -15,11 +15,15 @@ cmds = [
     'cat public/build/manifest.json',
     'mkdir -p storage/framework/views storage/framework/cache storage/framework/sessions storage/logs',
     'chmod -R 775 storage bootstrap/cache',
+    'php artisan config:clear',
+    'php artisan cache:clear',
+    'php artisan view:clear',
+    'php artisan route:clear',
     'php artisan migrate --force'
 ]
 
 [start]
-cmd = 'rm -rf storage/framework/views/* && php artisan view:clear && php artisan config:cache && php artisan route:cache && php artisan serve --host=0.0.0.0 --port=${PORT:-8000}'
+cmd = 'php artisan config:cache && php artisan route:cache && php artisan serve --host=0.0.0.0 --port=${PORT:-8000}'
 
 [variables]
 APP_ENV = 'production'
