--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -13,8 +13,11 @@ cmds = [
     'npm run build',
     'ls -la public/build',
     'cat public/build/manifest.json',
-    'mkdir -p storage/framework/views storage/framework/cache storage/framework/sessions storage/logs',
+    'mkdir -p storage/framework/views storage/framework/cache/data storage/framework/sessions storage/logs bootstrap/cache',
     'chmod -R 775 storage bootstrap/cache',
+    'rm -rf storage/framework/views/*',
+    'rm -rf storage/framework/cache/data/*',
+    'rm -rf bootstrap/cache/*.php',
     'php artisan config:clear',
     'php artisan cache:clear',
     'php artisan view:clear',
@@ -23,7 +26,7 @@ cmds = [
 ]
 
 [start]
-cmd = 'php artisan config:cache && php artisan route:cache && php artisan serve --host=0.0.0.0 --port=${PORT:-8000}'
+cmd = 'php artisan config:cache && php artisan route:cache && php artisan view:cache && php artisan serve --host=0.0.0.0 --port=${PORT:-8000}'
 
 [variables]
 APP_ENV = 'production'
